--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "sub",
-  "version": "1.1.4",
+  "version": "1.1.5",
   "description": "A simple 'get the treasure' game to familiarize with Phaser framework",
   "main": "src/index.js",
   "scripts": {
     "build": "webpack --config webpack/prod.js ",
-    "start": "npm run build && node server.js",
+    "start": "node server.js",
     "dev": "webpack-dev-server --config webpack/base.js"
   },
   "repository": {
